--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=springFirst
-spring.datasource.url=jdbc:mysql://localhost:3306/memo
+spring.datasource.url=jdbc:mysql://localhost:3306/schedule
 spring.datasource.username=root
-spring.datasource.password={Gcgc6899@}
+spring.datasource.password=Gcgc6899@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
